# VexDebugBoard

./: .gitignore  CMakeLists.txt  README.md  build.sh  sdkconfig
.cache/clangd/index/: common.cpp.952F1C755875DCF1.idx  common.hpp.A8DC618DE45971EF.idx  config.hpp.6409113303B37494.idx  connection_manager.cpp.7353CB585641F7AD.idx  connection_manager.h.8E91C7D18F4C3B85.idx  crc32.cpp.111BDD4DA5502E0C.idx  crc32.hpp.AA85278594BFDECD.idx  defines.h.4B5F22CC3C850258.idx  favicon.c.B984FF0417D777F2.idx  foxglove-ws.cpp.1AEE4F1613EEDA12.idx  foxglove-ws.hpp.FCED983A35EEA297.idx  main.cpp.054E0D3185AF1652.idx  mdns.c.E0C624B6689FB517.idx  mdns.h.E9D2A10AB5D7CEAE.idx  mdns_console.c.2E35CCB4236F5AA9.idx  mdns_mem_caps.c.995A0B8263CA5988.idx  mdns_mem_caps.h.1B8C5CE76B925C93.idx  mdns_networking.h.ED5D4405D44EB016.idx  mdns_networking_lwip.c.3A558CDC3241E2C7.idx  mdns_private.h.3FC5FDB5F1016B94.idx  message-format.cpp.5658E14C21214170.idx  message-format.hpp.2F7992D684E1E123.idx  protocol.cpp.CAAFA0D99868E38A.idx  protocol.hpp.26CE0CBD26973D82.idx  registry-listener.hpp.7933C9CA2340602F.idx  rest.cpp.10CD1A47E5B1A675.idx  rest.hpp.4A96E052A00DE617.idx  status_led.cpp.FADBC9E84022E32F.idx  status_led.hpp.DEF4920B4C642777.idx  types.cpp.B1EC0F470B19777B.idx  types.hpp.CBEAC078433E007C.idx  (+6 more)
components/HTTPLog/: CMakeLists.txt  HTTPLog.c
components/VDP/: CMakeLists.txt  crc32.cpp  device.cpp  protocol.cpp  registry.cpp  types.cpp  vdb_device.cpp
components/common/: CMakeLists.txt  common.cpp
components/foxglove-ws/: CMakeLists.txt  base64.cpp  foxglove-ws.c  foxglove-ws.cpp  foxglove_ws.c  parameter.cpp
components/webserver/: CMakeLists.txt  WebLog.c  favicon.c  index_html.c  rest.cpp  webserver.c  webserver.cpp
components/website/: CMakeLists.txt  Makefile  elm.json  embed_file.py  embed_file.sh  index.html  make_elm.py  make_elm.sh
components/website/c_srcs/: elm_min_js.c  index_html.c
components/website/html/: index.html
components/website/include/: website.h
components/website/src/: Api.elm  Common.elm  Configuration.elm  General.elm  Main.elm  UiUtil.elm  index.html
components/website/src/Pages/: Dashboard.elm
components/websocketer/: CMakeLists.txt  websocketer.c
foxglove-ws/: CMakeLists.txt  foxglove-ws.c
foxglove-ws/include/: foxglove-ws.h
main/: CMakeLists.txt  connection_manager.cpp  idf_component.yml  main.c  main.cpp  message-format.cpp  message-format.hpp  status_led.c  status_led.cpp  visitor.cpp  websocket-data.json
main/include/: config.hpp  connection_manager.h  defines.h  status_led.h  status_led.hpp  visitor.hpp  weblog.h
(+25 files in other folders)
